--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'Gordon, Charles George, 1833-1885'
 - !lcsh 'Generals -- Great Britain -- Biography'
+- GITenberg
 title: The Life of Gordon, Volume I
 url: http://www.gutenberg.org/ebooks/26419
